--- a/source/index.html
+++ b/source/index.html
@@ -9,5 +9,199 @@
     <title>Кинология</title>
 </head>
 <body>
+<div class="wrapper">
+    <header class="page-header">
+        <nav class="main-nav menu main-nav--opened">
+            <div class="main-nav__wrapper container">
+                <a class="main-nav__logo" href="index.html" aria-label="Логотип Real Group" tabindex="1">
+                    <img class="main-nav__logo-img" src="img/logo.png" alt="Real group" width="94" height="80">
+                </a>
+                <button class="main-nav__toggle" type="button">Открыть меню</button>
+                <ul class="main-nav__list menu">
+                    <li class="menu__item">
+                        <a class="menu__link" href="#">О компании</a>
+                    </li>
+                    <li class="menu__item menu__item--dropdown">
+                        <a class="menu__link" href="#">Услуги</a>
+                    </li>
+                    <li class="menu__item">
+                        <a class="menu__link" href="#">Контакты</a>
+                    </li>
+                </ul>
+                <ul class="main-nav__user-list user-menu">
+                    <li class="user-menu__item user-menu__item--phone" tabindex="4">
+                        <a class="user-menu__link" href="#">
+                            <span class="user-menu__phone"> +7 499 390-00-18</span>
+                        </a>
+                    </li>
+                    <li class="user-menu__item user-menu__item--button">
+                        <button type="submit" class="user-menu__button">Заказать звонок</button>
+                    </li>
+                </ul>
+                <ul class="main-nav__user-list dropdown-menu">
+                    <li class="dropdown-menu__item">
+                        <a class="dropdown-menu__link">Пункт меню1</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <section class="products-info">
+            <div class="products-info__wrapper container">
+                <div class="products-info__preview">
+                    <h3 class="products-info__subtitle">Кинологический центр Регул групп</h3>
+                    <h2 class="products-info__title">Полный спектр кинологических услуг</h2>
+                </div>
+            </div>
+        </section>
+        <section class="advantages">
+            <div class="advantages__wrapper container">
+                <ul class="advantages__list">
+                    <li class="advantages__item">
+                        <span class="advantages__item-title">Качество</span>
+                        <p class="advantages__item-text">Все наши собаки сертифицированы по поиску взрывчатых веществ
+                            Экспертно-консультационным
+                            Советом </p>
+                    </li>
+                    <li class="advantages__item">
+                        <span class="advantages__item-title">Квалификация</span>
+                        <p class="advantages__item-text">Квалификация, многократно подтвержденная на сертификатных
+                            состязаниях, выставках по
+                            безопасности, оперативных выездах</p>
+                    </li>
+                    <li class="advantages__item">
+                        <span class="advantages__item-title">Выгода</span>
+                        <p class="advantages__item-text">КЦ «РЕГУЛ ГРУПП», может входить
+                            в состав служб безопасности, что позволит повысить эффективность работы и качество услуг</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <div class="info__wrapper">
+            <div class="info-left__wrapper">
+                <section class="info">
+                    <div class="info__wrapper container">
+                        <p class="info__text">Наша компания создана в 2017 году с целью предоставления всего спектра
+                            кинологических услуг.</p>
+                        <p class="info__text"> Наша основная деятельность — поиск взрывчатых веществ, взрывоопасных
+                            предметов, взрывных
+                            устройств и наркотических средств при досмотре:
+                        </p>
+                    </div>
+                </section>
+                <section class="info-places">
+                    <div class="info-places__wrapper">
+                        <div class="info-places__item">
+                            <div class="info-places__item-image"></div>
+                            <p class="info-places__item-text">Зданий, в том числе учреждений образования
+                                и медицинского обслуживания</p>
+                        </div>
+                        <div class="info-places__item">
+                            <div class="info-places__item-image"></div>
+                            <p class="info-places__item-text">Участков местности</p>
+                        </div>
+                        <div class="info-places__item">
+                            <div class="info-places__item-image"></div>
+                            <p class="info-places__item-text">Грузов</p>
+                        </div>
+                        <div class="info-places__item">
+                            <div class="info-places__item-image"></div>
+                            <p class="info-places__item-text">Транспортных средств (автотранспорт, железнодорожный
+                                транспорт, авиатранспорт)</p>
+                        </div>
+                        <div class="info-places__item">
+                            <div class="info-places__item-image"></div>
+                            <p class="info-places__item-text">Багажа</p>
+                        </div>
+                    </div>
+                </section>
+            </div>
+            <div class="info-right__wrapper">
+                <h2 class="info__title">Наша задача — ваша безопасность</h2>
+                <section class="info-video">
+                    <div class="info-video__wrapper">
+                        <p class="info-vieo__title">Смотреть видео о нашей работе</p>
+                        <div class="info-video__image"></div>
+                        <img src="img/icon-youtube.png" width="35" height="25">
+                    </div>
+                </section>
+            </div>
+        </div>
+        <section class="services">
+            <div class="services__wrapper">
+                <h2 class="services__title">Услуги</h2>
+                <div class="services__item">
+                    <div class="servicec__item-image"></div>
+                    <p class="services__item-text">Обнаружение взрывчатых веществ
+                        и устройств</p>
+                </div>
+                <div class="services__item">
+                    <div class="servicec__item-image"></div>
+                    <p class="services__item-text">Обнаружение наркотических средств
+                        и психотропных веществ</p>
+                </div>
+                <div class="services__item">
+                    <div class="servicec__item-image"></div>
+                    <p class="services__item-text">Караульная служба по охране объектов</p>
+                </div>
+                <div class="services__item">
+                    <div class="servicec__item-image"></div>
+                    <p class="services__item-text">Обеспечение безопасности
+                        при проведении массовых
+                        мероприятий</p>
+                </div>
+                <div class="services__item">
+                    <div class="servicec__item-image"></div>
+                    <p class="services__item-text">Использование собак для личной охраны VIP лиц</p>
+                </div>
+                <div class="services__item">
+                    <div class="servicec__item-image"></div>
+                    <p class="services__item-text">Дрессировка собак и продажа щенков</p>
+                </div>
+            </div>
+        </section>
+        <section class="sponsors">
+            <h2 class="sponsors__title">Нам доверяют</h2>
+            <div class="sponsors__gallery">
+                <button class="sponsors__prev">Предыдущий</button>
+                <div class="sponsors__image"></div>
+                <div class="sponsors__image"></div>
+                <div class="sponsors__image"></div>
+                <div class="sponsors__image"></div>
+                <button class="sponsors__next">Следующий</button>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="footer__wrapper">
+            <ul class="footer__menu menu">
+                <li class="menu__item">
+                    <a class="menu__link" href="#">О компании</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#">Услуги</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#">Контакты</a>
+                </li>
+            </ul>
+            <img src="img/logo-postavki.png" width="42" height="45">
+            <div class="footer__social">
+                <ul class="footer__social-list social">
+                    <li class="social__item">
+                        <a class="social__link" aria-label="Facebook"><img src="img/icon-facebook.png" width="40" height="40"></a>
+                    </li>
+                    <li class="social__item">
+                        <a class="social__link" aria-label="VK"><img src="img/icon-vk.png" width="40" height="40"></a>
+                    </li>
+                    <li class="social__item">
+                        <a class="social__link" aria-label="Inastagram"><img src="img/icon-instagram.png"></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+</div>
 </body>
 </html>
