Add block in footer + add scssutilities

--- a/source/index.html
+++ b/source/index.html
@@ -59,18 +59,21 @@
             <div class="advantages__wrapper container">
                 <ul class="advantages__list">
                     <li class="advantages__item">
+                        <span class="advantages__item-image"></span>
                         <span class="advantages__item-title">Качество</span>
                         <p class="advantages__item-text">Все наши собаки сертифицированы по поиску взрывчатых веществ
                             Экспертно-консультационным
                             Советом </p>
                     </li>
                     <li class="advantages__item">
+                        <span class="advantages__item-image"></span>
                         <span class="advantages__item-title">Квалификация</span>
                         <p class="advantages__item-text">Квалификация, многократно подтвержденная на сертификатных
                             состязаниях, выставках по
                             безопасности, оперативных выездах</p>
                     </li>
                     <li class="advantages__item">
+                        <span class="advantages__item-image"></span>
                         <span class="advantages__item-title">Выгода</span>
                         <p class="advantages__item-text">КЦ «РЕГУЛ ГРУПП», может входить
                             в состав служб безопасности, что позволит повысить эффективность работы и качество услуг</p>
@@ -175,31 +178,54 @@
     </main>
     <footer>
         <div class="footer__wrapper">
-            <ul class="footer__menu menu">
-                <li class="menu__item">
-                    <a class="menu__link" href="#">О компании</a>
-                </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="#">Услуги</a>
-                </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="#">Контакты</a>
-                </li>
-            </ul>
-            <img src="img/logo-postavki.png" width="42" height="45">
-            <div class="footer__social">
-                <ul class="footer__social-list social">
-                    <li class="social__item">
-                        <a class="social__link" aria-label="Facebook"><img src="img/icon-facebook.png" width="40" height="40"></a>
+            <div class="footer__wrapper-left">
+                <ul class="footer__menu menu">
+                    <li class="menu__item">
+                        <a class="menu__link" href="#">О компании</a>
                     </li>
-                    <li class="social__item">
-                        <a class="social__link" aria-label="VK"><img src="img/icon-vk.png" width="40" height="40"></a>
+                    <li class="menu__item">
+                        <a class="menu__link" href="#">Услуги</a>
                     </li>
-                    <li class="social__item">
-                        <a class="social__link" aria-label="Inastagram"><img src="img/icon-instagram.png"></a>
+                    <li class="menu__item">
+                        <a class="menu__link" href="#">Контакты</a>
                     </li>
                 </ul>
+                <img src="img/logo-postavki.png" width="42" height="45">
+                <div class="footer__social">
+                    <ul class="footer__social-list social">
+                        <li class="social__item">
+                            <a class="social__link" aria-label="Facebook"><img src="img/icon-facebook.png" width="40"
+                                                                               height="40"></a>
+                        </li>
+                        <li class="social__item">
+                            <a class="social__link" aria-label="VK"><img src="img/icon-vk.png" width="40"
+                                                                         height="40"></a>
+                        </li>
+                        <li class="social__item">
+                            <a class="social__link" aria-label="Inastagram"><img src="img/icon-instagram.png"></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
+        </div>
+        <div class="footer__wrapper-right">
+            <p class="footer__contacts">
+                <span class="footer__contacts-title">Адрес:</span>
+                117419, город Москва, улица Цюрупы,
+                дом 1а, строение 2, помещение 3.
+            </p>
+            <p class="footer__contacts">
+                <span class="footer__contacts-title">Тел.:</span>
+                8 (499) 390 00 18
+            </p>
+            <p class="footer__contacts">
+                <span class="footer__contacts-title">Моб.:</span>
+                8 (499) 390 00 18
+            </p>
+            <p class="footer__contacts">
+                <span class="footer__contacts-title">Эл. почта: </span>
+                regul-group@mail.ru, regul-k9@mail.ru
+            </p>
         </div>
     </footer>
 </div>
