--- a/source/index.html
+++ b/source/index.html
@@ -16,20 +16,20 @@
                 <a class="main-nav__logo" href="index.html" aria-label="Логотип Real Group" tabindex="1">
                     <img class="main-nav__logo-img" src="img/logo.png" alt="Real group" width="94" height="80">
                 </a>
-                <button class="main-nav__toggle" type="button">Открыть меню</button>
+                <button class="main-nav__toggle" type="button" aria-label="Открыть меню">Открыть меню</button>
             </div>
             <div class="main-nav__wrapper container">
                 <a class="main-nav__logo" href="index.html" aria-label="Логотип Real Group" tabindex="1">
                     <img class="main-nav__logo-img" src="img/logo.png" alt="Real group" width="94" height="80">
                 </a>
-                <button class="main-nav__toggle" type="button">Открыть меню</button>
+                <button class="main-nav__toggle" type="button" aria-label="Открыть меню">Открыть меню</button>
                 <ul class="main-nav__list menu">
                     <li class="menu__item">
                         <a class="menu__link" href="#">О компании</a>
                     </li>
                     <li class="menu__item menu__item--dropdown">
                         <a class="menu__link" href="#">Услуги</a>
-                        <button class="menu__dropdown">Раскрыть меню</button>
+                        <button class="menu__dropdown" aria-label="Раскрыть меню">Раскрыть меню</button>
                     </li>
                     <li class="menu__item">
                         <a class="menu__link" href="#">Контакты</a>
@@ -93,7 +93,7 @@
         <div class="info__wrapper">
             <div class="info-left__wrapper">
                 <section class="info">
-                    <div class="info__wrapper container">
+                    <div class="info__wrapper-text container">
                         <p class="info__text">Наша компания создана в 2017 году с целью предоставления всего спектра
                             кинологических услуг.</p>
                         <p class="info__text info__text--mobile"> Наша основная деятельность — поиск взрывчатых веществ,
@@ -104,6 +104,7 @@
                     </div>
                 </section>
                 <section class="info-places">
+                    <div class="info-places__wrapper-background"></div>
                     <div class="info-places__wrapper">
                         <div class="info-places__item">
                             <div class="info-places__item-image info-places__item-image--palace"></div>
@@ -214,15 +215,15 @@
                     <img class="footer__social-providers" src="img/logo-postavki.png" alt="Поставки" width="42" height="45">
                     <ul class="footer__social-list social">
                         <li class="social__item">
-                            <a class="social__link" aria-label="Facebook"><img src="img/icon-facebook.png" width="40"
+                            <a class="social__link" aria-label="Facebook" href="#"><img src="img/icon-facebook.png" width="40"
                                                                                height="40" alt="Фейсбук"></a>
                         </li>
                         <li class="social__item">
-                            <a class="social__link" aria-label="VK"><img src="img/icon-vk.png" width="40"
+                            <a class="social__link" aria-label="VK" href="#"><img src="img/icon-vk.png" width="40"
                                                                          height="40" alt="Вконтакте"></a>
                         </li>
                         <li class="social__item">
-                            <a class="social__link" aria-label="Inastagram"><img src="img/icon-instagram.png" alt="Инстаграм"></a>
+                            <a class="social__link" aria-label="Inastagram" href="#"><img src="img/icon-instagram.png" alt="Инстаграм"></a>
                         </li>
                     </ul>
                 </div>
