--- a/source/index.html
+++ b/source/index.html
@@ -215,15 +215,19 @@
                     <img class="footer__social-providers" src="img/logo-postavki.png" alt="Поставки" width="42" height="45">
                     <ul class="footer__social-list social">
                         <li class="social__item">
-                            <a class="social__link" aria-label="Facebook" href="#"><img src="img/icon-facebook.png" width="40"
-                                                                               height="40" alt="Фейсбук"></a>
+                            <a class="social__link" aria-label="Facebook" href="#">
+                                <img src="img/icon-facebook.png" class="social__link-image" width="40" height="40" alt="Фейсбук">
+                            </a>
                         </li>
                         <li class="social__item">
-                            <a class="social__link" aria-label="VK" href="#"><img src="img/icon-vk.png" width="40"
-                                                                         height="40" alt="Вконтакте"></a>
+                            <a class="social__link" aria-label="VK" href="#">
+                                <img src="img/icon-vk.png" class="social__link-image" width="40" height="40" alt="Вконтакте">
+                            </a>
                         </li>
                         <li class="social__item">
-                            <a class="social__link" aria-label="Inastagram" href="#"><img src="img/icon-instagram.png" alt="Инстаграм"></a>
+                            <a class="social__link" aria-label="Inastagram" href="#">
+                                <img src="img/icon-instagram.png" class="social__link-image" alt="Инстаграм">
+                            </a>
                         </li>
                     </ul>
                 </div>
