--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
                 <a class="main-nav__logo" href="index.html" aria-label="Логотип Real Group" tabindex="1">
                     <img class="main-nav__logo-img" src="img/logo.png" alt="Real group" width="94" height="80">
                 </a>
-                <button class="main-nav__toggle" type="button" aria-label="Открыть меню">Открыть меню</button>
+                <button class="main-nav__toggle" type="submit" aria-label="Открыть меню">Открыть меню</button>
             </div>
             <div class="main-nav__wrapper container">
                 <a class="main-nav__logo" href="index.html" aria-label="Логотип Real Group" tabindex="1">
@@ -65,25 +65,25 @@
                         <span class="advantages__item-image advantages__item-image--1"></span>
                         <p class="advantages__item-wrapper">
                             <span class="advantages__item-title">Качество</span>
-                        <span class="advantages__item-text">Все наши собаки сертифицированы по поиску взрывчатых веществ
+                            <span class="advantages__item-text">Все наши собаки сертифицированы по поиску взрывчатых веществ
                             Экспертно-консультационным
                             Советом </span>
                         </p>
                     </li>
                     <li class="advantages__item">
                         <span class="advantages__item-image advantages__item-image--2"></span>
-                    <p class="advantages__item-wrapper">
-                        <span class="advantages__item-title">Квалификация</span>
-                        <span class="advantages__item-text">Квалификация, многократно подтвержденная на сертификатных
+                        <p class="advantages__item-wrapper">
+                            <span class="advantages__item-title">Квалификация</span>
+                            <span class="advantages__item-text">Квалификация, многократно подтвержденная на сертификатных
                         состязаниях, выставках по
                         безопасности, оперативных выездах</span>
-                    </p>
+                        </p>
                     </li>
                     <li class="advantages__item">
                         <span class="advantages__item-image advantages__item-image--3"></span>
                         <p class="advantages__item-wrapper">
                             <span class="advantages__item-title">Выгода</span>
-                             <span class="advantages__item-text">КЦ «РЕГУЛ ГРУПП», может входить
+                            <span class="advantages__item-text">КЦ «РЕГУЛ ГРУПП», может входить
                             в состав служб безопасности, что позволит повысить эффективность работы и качество услуг</span>
                         </p>
                     </li>
@@ -118,6 +118,11 @@
                         <div class="info-places__item">
                             <div class="info-places__item-image info-places__item-image--weight"></div>
                             <p class="info-places__item-text">Грузов</p>
+                        </div>
+                        <div class="info-places__item">
+                            <div class="info-places__item-image info-places__item-image--train"></div>
+                            <p class="info-places__item-text">Транспортных средств (автотранспорт, железнодорожный
+                                транспорт, авиатранспорт)</p>
                         </div>
                         <div class="info-places__item">
                             <div class="info-places__item-image info-places__item-image--train"></div>
@@ -212,16 +217,19 @@
                     </li>
                 </ul>
                 <div class="footer__social">
-                    <img class="footer__social-providers" src="img/logo-postavki.png" alt="Поставки" width="42" height="45">
+                    <img class="footer__social-providers" src="img/logo-postavki.png" alt="Поставки" width="42"
+                         height="45">
                     <ul class="footer__social-list social">
                         <li class="social__item">
                             <a class="social__link" aria-label="Facebook" href="#">
-                                <img src="img/icon-facebook.png" class="social__link-image" width="40" height="40" alt="Фейсбук">
+                                <img src="img/icon-facebook.png" class="social__link-image" width="40" height="40"
+                                     alt="Фейсбук">
                             </a>
                         </li>
                         <li class="social__item">
                             <a class="social__link" aria-label="VK" href="#">
-                                <img src="img/icon-vk.png" class="social__link-image" width="40" height="40" alt="Вконтакте">
+                                <img src="img/icon-vk.png" class="social__link-image" width="40" height="40"
+                                     alt="Вконтакте">
                             </a>
                         </li>
                         <li class="social__item">
@@ -256,5 +264,6 @@
         </div>
     </footer>
 </div>
+<script src="js/index.js"></script>
 </body>
 </html>
